--- a/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.html
+++ b/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.html
@@ -1,30 +1,35 @@
 <ion-header [translucent]="false">
   <ion-toolbar class="header-dashboard">
-      <img class="logo" src="../../../../../assets/images/header-logo.svg">
+    <img class="logo" src="../../../../../assets/images/header-logo.svg" />
 
-      <ion-buttons mode="ios" slot="end">
-          <ion-buttons slot="start">
-              <ion-menu-button autoHide="false"></ion-menu-button>
-          </ion-buttons>
+    <ion-buttons mode="ios" slot="end">
+      <ion-buttons slot="start">
+        <ion-menu-button autoHide="false"></ion-menu-button>
       </ion-buttons>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="has-tabs" no-bounce has-bouncing="false" forceOverscroll="false">
-
   <div class="content-wrapper column start">
-      <h1>Shopping List</h1>
+    <h1>Shopping List</h1>
 
-      <div class="mealslot" *ngFor="let meal of mealSlots">
-          <div class="meal-content">
-              <h2>{{ meal.recipe.title }}</h2>
+    <div class="mealslot" *ngFor="let meal of mealSlots">
+      <div class="meal-content">
+        <h2>{{ meal.recipe.title }}</h2>
 
-              <div class="ingredients details-box">
-                <div class="ingredient-item" *ngFor="let ingredient of meal.recipe.ingredientsFull">
-                    <p class="text">{{ ingredient }}</p>
-                </div>
-              </div>
+        <div class="ingredients details-box">
+          <div
+            class="ingredient-item"
+            *ngFor="let ingredient of meal.recipe.ingredientsFull; let i = index"
+            (click)="markIngredientCollected(i, meal)"
+          >
+            <div class="question-option-radio" [ngClass]="{ selected: ingredientCollected(i, meal) }">
+              <div class="radio"></div>
+              <p class="text">{{ ingredient }}</p>
+            </div>
           </div>
+        </div>
       </div>
+    </div>
   </div>
-
 </ion-content>
